# disagg_optimizer

./: .gitignore  Cargo.toml  README.md  output.txt
src/: cascades.rs  join_graph.rs  lib.rs  main.rs  planprinter.rs
src/cascades/: cascades.rs  constants.rs  expression_utils.rs  expression_utils_test.rs  group.rs  lib.rs  main.rs  mexpr.rs  mod.rs  operator.rs  rulematcher.rs  sourcenode.rs  test_utils.rs  util.rs
tests/: expression_utils_test.rs
