[package]
name = "disagg_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "49.0.2"
datafusion-expr = "49.0.2"
datafusion-common = "49.0.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ahash = "0.8"
murmur3 = "0.5"
once_cell = "1.19"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
datafusion-optimizer = "49.0.2"
datafusion-expr-common = "49.0.2"
debug_print = "1.0.0"
log = "0.4"
env_logger = "0.10"

